load("//tools:defs.bzl", "builder")

licenses(["notice"])

builder(
    name = "builder",
    buildpacks = [
        "//cmd/utils/label:label.tgz",
    ],
    groups = {
        "java": [
            "//cmd/java/clear_source:clear_source.tgz",
            "//cmd/java/functions_framework:functions_framework.tgz",
            "//cmd/java/gradle:gradle.tgz",
            "//cmd/java/maven:maven.tgz",
        ],
    },
    image = "< REGISTRY >/builder-java:v2-< JAVA_VERSION >",
    visibility = [
        "//builders/java11/acceptance:__pkg__",
    ],
)
