load("//tools:defs.bzl", "builder")

licenses(["notice"])

builder(
    name = "builder",
    buildpacks = [
        "//cmd/config/entrypoint:entrypoint.tgz",
        "//cmd/utils/label:label.tgz",
    ],
    groups = {
        "nodejs": [
            "//cmd/nodejs/functions_framework:functions_framework.tgz",
            "//cmd/nodejs/npm:npm.tgz",
            "//cmd/nodejs/yarn:yarn.tgz",
        ],
    },
    image = "of/node10",
    visibility = [
        "//builders/node10/acceptance:__pkg__",
    ],
)
