load("//tools:defs.bzl", "builder")

licenses(["notice"])

builder(
    name = "builder",
    buildpacks = [
        "//cmd/config/entrypoint:entrypoint.tgz",
        "//cmd/utils/label:label.tgz",
    ],
    groups = {
        "python": [
            "//cmd/python/functions_framework:functions_framework.tgz",
            "//cmd/python/missing_entrypoint:missing_entrypoint.tgz",
            "//cmd/python/pip:pip.tgz",
        ],
    },
    image = "of/py37",
    visibility = [
        "//builders/py37/acceptance:__pkg__",
    ],
)
