licenses(["notice"])

sh_binary(
    name = "build",
    srcs = ["build.sh"],
    args = [
        "$(location build.sh)",
        "$(location //licenses:licenses.tar)",
    ],
    data = [
        "build.Dockerfile",
        "parent.Dockerfile",
        "run.Dockerfile",
        "parent.cbl-mariner2.0-distroless.Dockerfile",
        "//licenses:licenses.tar",
    ],
)
