load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

licenses(["notice"])

go_library(
    name = "acceptance",
    srcs = ["acceptance.go"],
    importpath = "github.com/GoogleCloudPlatform/buildpacks/" + package_name(),
)

go_test(
    name = "go_fn_test",
    size = "enormous",
    srcs = ["go_fn_test.go"],
    args = [
        "-test-data=$(location //builders/testdata/go:functions)",
        "-structure-test-config=$(location :config.yaml)",
        "-builder-source=$(location //builders/go115:builder.tar)",
        "-pull-images=false",
        "-builder-prefix=gcpbase-go-fn-test-",
    ],
    data = [
        ":config.yaml",
        "//builders/go115:builder.tar",
        "//builders/testdata/go:functions",
    ],
    embed = [":acceptance"],
    rundir = ".",
    tags = [
        "local",
    ],
    deps = ["//internal/acceptance"],
)
