load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

licenses(["notice"])

go_library(
    name = "acceptance",
    srcs = ["acceptance.go"],
    importpath = "github.com/GoogleCloudPlatform/buildpacks/" + package_name(),
)

go_test(
    name = "nodejs_fn_test",
    size = "enormous",
    srcs = ["nodejs_fn_test.go"],
    args = [
        "-test-data=$(location //builders/testdata/nodejs:functions)",
        "-structure-test-config=$(location :config.yaml)",
        "-builder-source=$(location //builders/node10:builder.tar)",
        "-builder-prefix=gcpbase-nodejs-fn-test-",
        "-pull-images=false",
    ],
    data = [
        ":config.yaml",
        "//builders/node10:builder.tar",
        "//builders/testdata/nodejs:functions",
    ],
    embed = [":acceptance"],
    rundir = ".",
    tags = [
        "local",
    ],
    deps = ["//internal/acceptance"],
)