load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

licenses(["notice"])

go_library(
    name = "acceptance",
    srcs = ["acceptance.go"],
    importpath = "github.com/GoogleCloudPlatform/buildpacks/" + package_name(),
)

go_test(
    name = "python_fn_test",
    size = "enormous",
    srcs = ["python_fn_test.go"],
    args = [
        "-test-data=$(location //builders/testdata/python:functions)",
        "-structure-test-config=$(location :config.yaml)",
        "-builder-source=$(location //builders/py39:builder.tar)",
        "-builder-prefix=gcpbase-python-fn-test-",
        "-pull-images=false",
    ],
    data = [
        ":config.yaml",
        "//builders/py39:builder.tar",
        "//builders/testdata/python:functions",
    ],
    embed = [":acceptance"],
    rundir = ".",
    tags = [
        "local",
    ],
    deps = ["//internal/acceptance"],
)